# backtesting-platform

./: .gitignore  back_tester.py  bla  environment.py  main.py  market_data.py  mongo.sh  mongo_test.py  package-lock.json  pyproject.toml  requirements.txt  run.sh
backend/: .gitignore  app.py  auth.py  pyproject.toml
backend/backtester/: back_tester.py  environment.py  main.py
backend/backtester/strategies/: base_strategy.py  example_strategy.py  example_strategy1.py  example_strategy2.py  percentage_sma_strategy.py  rsi_strategy.py  sma_strategy.py  volume_ma.py
backtester/: README.MD  back_tester.py  main.py  market_data.py  pyproject.toml
backtester/strategies/: example_strategy.py
strategies/: base_strategy.py  buy_base_strategy.py  example_strategy.py  sma_strategy.py
ui/: .env  package-lock.json  package.json
ui/src/: App.js  Home.js  Login.js  Signup.js  index.js
ui/src/components/: BacktestingResultsPage.js  CreateEnvironmentPage.js  EditStrategyModal.js  EnvironmentsPage.js  Home.js  HomePage.js  Login.js  Signup.js  SimulationPage.js  SimulationsPage.js  StrategiesPage.js  StrategyInfoPage.js  StrategyModal.js
ui/src/contexts/: AuthContext.js
ui/src/data/: sp500stocks.js
ui/src/services/: api.js  api.ts
