[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "pydantic==2.4.2",
    "python-dateutil==2.8.2",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "uvicorn==0.24.0",
]
