[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi==0.104.1",
    "pandas>=2.2.3",
    "pydantic==2.4.2",
    "pymongo>=4.12.0",
    "python-dateutil==2.8.2",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "uvicorn==0.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
